envs/policies/authpol-allow-from-ingress-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authpolicy-allow-from-ingress-gateway
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system", "elpa-elpa4"]
