envs/policies/authpol-allow-from-otelcollector.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authpolicy-allow-from-otelcollector
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["splunk-otel-collector"]
