envs/policies/netpol-allow-from-ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-gateway
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                values: ["istio-system"]
          podSelector:
            matchLabels:
              environment: dev
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                values: ["istio-system"]
          podSelector:
            matchLabels:
              environment: dev
