envs/policies/netpol-allow-from-namespace-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace-gateway
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                values: ["elpa-elpa4"]
  egress:
    - to:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                values: ["elpa-elpa4"]
