envs/policies/netpol-allow-from-otelcollector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-from-otelcollector
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                values: ["splunk-otel-collector"]
